# Auralyn

./: .gitignore  LICENSE  README.md  comments.json  generate-licenses.cjs  implementation_plan.md  index.html  make_transparent.py  package-lock.json  package.json  review_comments.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.agent/rules/: core_rules.md
.agent/skills/Changelog_Generator/: SKILL.md
.gemini/: GEMINI.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: BRANDING.md  BUILD_GUIDE.md  CODING_GUIDELINES.md  FEATURE_PLAN_STARTUP_AND_TEMPLATES.md  KNOWN_ISSUES.md  PROPOSALS_20260217.md  PROPOSALS_HELP_SYSTEM.md  PUBLIC_REPO_AND_RISKS.md  RELEASE_PLAN.md  ROADMAP_PENDING.md  SPECIFICATION.md  TESTING.md  UI_UX_CRITIQUE.md  UX_CRITIQUE.md  WEB_SITE_DESIGN.md  documentation_diagrams.drawio  setup_wizard_manual.md
release_artifacts/: release-history.json
scripts/: check_bmp_depth.js  check_icon_res.js  generate-nsis-bitmaps.js  generate_diagrams.cjs  package_release.cjs  package_release.js  prepare-sidecar.js  preview_icon_crop.js  preview_icon_finetune.js  preview_icon_fitting.js  preview_icon_offsets.js  preview_icon_tightness.js  preview_icon_zoom.js  publish_release.py  rebuild-engine.js  recreate_icon.js  set-version.cjs  test_sharp_bmp.js  upload-release-to-public-repo.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  about.hbs  about.toml  error.txt  licenses.txt  metadata.json  metadata_full.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  autostart.rs  ipc.rs  lib.rs  main.rs  obs.rs
src-tauri/src/audio_engine/: core.rs  devices.rs  editors.rs  mod.rs  plugins.rs  resampling.rs
src-tauri/src/vst_host/: blacklist.rs  c_api.rs  instance.rs  mod.rs  presets.rs  scanner.rs
src-tauri/tests/: integration_test.rs  repro_ott.rs
src/__tests__/: setup.ts
src/api/: audio.ts  autostart.ts  obs.ts  presets.ts
src/assets/: licenses-cargo-test.json  licenses-cargo.json  licenses-npm.json
src/components/: ErrorBoundary.tsx
src/constants/: appInfo.ts  audio.ts
src/contexts/: AudioConfigContext.tsx  TutorialContext.tsx  UIContext.tsx
src/hooks/: useAppEvents.ts  useAppEvents_stub.ts  useAudioConfig.ts  usePlugins.ts  useTheme.tsx  useUIState.ts
src/templates/: chainTemplates.ts
(+40 files in other folders)
