[package]
name = "vst-host"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "AuralynHost"

[[bin]]
name = "AuralynHost"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vst_host_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = { version = "0.17.0", features = ["asio"] }
anyhow = "1.0.100"
log = "0.4.29"
env_logger = "0.11.8"
vst3 = "0.3.0"
walkdir = "2.5.0"
ringbuf = "0.4.8"
libloading = "0.9.0"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Rpc", "Win32_System_Ole", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_SystemInformation", "Win32_System_Memory", "Win32_System_JobObjects", "Win32_System_Diagnostics_Debug", "Win32_UI_HiDpi", "Win32_Graphics_Gdi", "Win32_Graphics_GdiPlus"] }
winit = "0.29.15"
raw-window-handle = "0.6"
open = "5.3.3"
tauri-plugin-window-state = "2.4.1"
base64 = "0.21"
obws = { version = "0.11", features = ["events"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
winreg = "0.52"
rubato = "0.14"


[dev-dependencies]
serde_json = "1"
# assert_cmd = "2" # Optional, if we want easier process testing, but std::process is fine for now to avoid extra deps download time

# --- Build Profile Optimizations ---

# Optimize dependencies even in dev builds to speed up engine startup/audio processing
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true        # Link Time Optimization (smaller binary, faster code)
panic = "abort"   # Remove unwind tables (smaller binary)
strip = true      # Remove symbols (smaller binary)

